Bug 144059 - [l10n] Language Tigrigna should be listed in CTL, not as Western
Summary: [l10n] Language Tigrigna should be listed in CTL, not as Western
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.3.0 target:7.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-24 15:43 UTC by holybiber
Modified: 2021-08-31 09:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description holybiber 2021-08-24 15:43:23 UTC
Description:
Tigrigna (often also spelled Tigrinya) uses the Ethiopic script which is complex text layout (like Amharic).
However, Tigrigna (both for Eritrea and Ethiopia) is currently listed under Western Fonts.
See also https://ask.libreoffice.org/t/on-tigrigna/63540

Steps to Reproduce:
1. Edit default paragraph style
2. Go to the "font" tab
3. Check the dropdown selections for Western Text Font and CTL Font

Actual Results:
Tigrigna (Eritrea) and Tigrigna (Ethiopia) are listed among Western Text Font. They aren't listed among CTL Font.

Expected Results:
They should be in CTL Font, not in Western Font.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice 6.4.7.2
Comment 1 Commit Notification 2021-08-30 14:21:23 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/158cc1d81121df12edfaf9ce80a7745e6aaad46b

Resolves: tdf#144059 Tigrigna {ti-*} (Ethi) is CTL

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Eike Rathke (retired, only occasionally showing up) 2021-08-30 14:22:30 UTC
Pending review https://gerrit.libreoffice.org/c/core/+/121281 for 7-2
Comment 3 Commit Notification 2021-08-31 09:36:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c42356ad2798e9aa6c724a99f39ff15a253ef0c2

Resolves: tdf#144059 Tigrigna {ti-*} (Ethi) is CTL

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.