Resolves: tdf#144059 Tigrigna {ti-*} (Ethi) is CTL

Change-Id: I5fb56e039c854471ae444395feee27e820902181
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121297
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 158cc1d81121df12edfaf9ce80a7745e6aaad46b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/121281
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>